sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:6: error: reassignment to val
	while (estTrie=false) {
                      ^